@@ -155,10 +155,9 @@ sub process_deletes {
 
         my $reschedule_fid = sub {
             my ($secs, $reason) = (int(shift), shift);
-            $dbh->do("INSERT IGNORE INTO file_to_delete_later (fid, delafter) ".
-                     "VALUES (?,".$sto->unix_timestamp."+$secs)", undef,
-                     $fid);
-            $sto->condthrow("Failure to insert into file_to_delete_later");
+            $sto->insert_ignore("INTO file_to_delete_later (fid, delafter) ".
+                "VALUES (?,".$sto->unix_timestamp."+$secs)", undef,
+                $fid);
             error("delete of fid $fid rescheduled: $reason") if $Mgd::DEBUG >= 2;
             $done_with_fid->("rescheduled");
         };
